# agent-runtime

./: .gitignore  Cargo.toml  README.md
agents/: log-watcher.yaml  tester.yaml
agents/log-watcher/: manifest.yaml  prompt.md
agents/tester/: manifest.yaml  prompt.md
packaging/macos/: Info.plist  make-app-bundle.sh
src/: audit.rs  lib.rs  main.rs  manifest.rs  paths.rs  policy.rs  runner.rs  sandbox.rs
src/agent/: mod.rs  session.rs
src/model/: mock.rs  mod.rs  types.rs
src/tools/: log_tools.rs  mod.rs  test_tools.rs
tasks/: log-watcher-denied.json  log-watcher.json  tester-deny-cmd.json  tester-git.json  tester-ok.json
testdata/sample-crate/: Cargo.toml
tests/: integration.rs  path_policy.rs
