[package]
name = "agent-runtime"
version = "0.1.0"
edition = "2021"
description = "Capability-based sandbox runtime for role-scoped AI agents"
license = "MIT OR Apache-2.0"
rust-version = "1.74"

[[bin]]
name = "agent-runner"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.10"
